--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,17 @@ body{
   background: white;
 }
 
+.loader{
+  position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('img/logo.jpg') 50% 50% no-repeat rgb(249,249,249);
+    opacity: .8;
+}
+
 .bg-index{
   /* background: url('../img/bg.jpg') no-repeat fixed;
   background-size: cover;
