--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,15 @@
 body{
   background: white;
 }
-
-.loader{
-  position: fixed;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
-    background: url('img/logo.jpg') 50% 50% no-repeat rgb(249,249,249);
-    opacity: .8;
-}
+.js div#preloader { 
+  position: fixed; 
+  left: 0; 
+  top: 0; 
+  z-index: 999; 
+  width: 100%; 
+  height: 100%; 
+  overflow: visible; 
+  background: rgb(255, 255, 255) url(img/load.gif) no-repeat center center; }
 
 .bg-index{
   /* background: url('../img/bg.jpg') no-repeat fixed;
