--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body{
   width: 100%; 
   height: 100%; 
   overflow: visible; 
-  background: #333 url(../img/load.gif) no-repeat center center; }
+  background: white url(../img/load.gif) no-repeat center center; }
 
 .bg-index{
   /* background: url('../img/bg.jpg') no-repeat fixed;
