--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body{
 
 .bg-alainza{
   min-height: 100vh;
-  background-image: url(../img/business-3167295_1920.jpg);
+  background-image: url(../img/bg1.jpg);
   background-position: 0%;
   background-size: cover;
   background-repeat: no-repeat;
