--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=K2D');
+
 body {
   background: white;
+  font-family: 'K2D', sans-serif;
+  font-size: 20px;
 }
 .js div#preloader {
   position: fixed;
