--- a/css/style.css
+++ b/css/style.css
@@ -101,11 +101,11 @@ header a:hover {
   padding-bottom: 15px;
   /* min-height: 100vh; */
 }
-
+/* 
 #logo {
   max-width: 350px;
   max-height: 247px;
-}
+} */
 
 #footer {
   background: #e9ecef;
