--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,12 @@ p {
 i{
   color: black;
 }
+
+.au{
+  border: solid 1px black;
+  padding: 1px;
+  height: 42px;
+  width: 42px;
+  display: inline-flex;
+  justify-content: center;
+}
