--- a/css/style.css
+++ b/css/style.css
@@ -131,10 +131,11 @@ i{
 }
 
 .au{
-  border: solid 1px black;
+  border: solid 2px black;
+  border-radius: 10%;
   padding: 1px;
-  height: 42px;
-  width: 42px;
+  height: 44px;
+  width: 44px;
   display: inline-flex;
   justify-content: center;
 }
