--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,12 @@ p {
   margin-right: 0 !important;
 }
 
+/* 
+Pagina        |
+de            |
+Alianza       V
+*/
+
 .alianza {
   border: 8px solid #000000;
 }
