--- a/css/style.css
+++ b/css/style.css
@@ -120,11 +120,17 @@ Alianza       V
 */
 
 .alianza {
-  border: 8px solid #000000;
   border-radius: 10px 10px 10px 10px;
   -moz-border-radius: 10px 10px 10px 10px;
   -webkit-border-radius: 10px 10px 10px 10px;
   border: 0px solid #000000;
+
+  -webkit-box-shadow: 0px 10px 14px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0px 10px 14px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 10px 14px 0px rgba(0, 0, 0, 0.4);
+
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 i {
