--- a/css/style.css
+++ b/css/style.css
@@ -146,3 +146,11 @@ i {
   display: inline-flex;
   justify-content: center;
 }
+
+.au:hover{
+  border: solid 2px rgb(78, 142, 156);
+}
+
+i:hover{
+  color: #7AE1F7;
+}
