--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ i {
 }
 
 .au {
-  border: solid 2px black;
+  /* border: solid 2px black; */
   border-radius: 10%;
   padding: 1px;
   height: 44px;
@@ -155,6 +155,6 @@ i:hover{
   color: #7AE1F7;
 }
 
-a > img{
+section > a > img{
   width: 90px;
 }
