--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ i {
 }
 
 .au {
-  /* border: solid 2px black; */
+  border: solid 2px black;
   border-radius: 10%;
   padding: 1px;
   height: 44px;
