--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,23 @@ body {
     center;
 }
 
+/* tamaño del main */
+#main{
+  height: 100vh;
+}
+
 .bg-index {
-  min-height: 50vh;
-  background-image: url(../img/bg2.jpg);
+  min-height: 100%;
+  min-width: 100%;
+  background-image: url(../img/fondo.jpg);
   background-position: 0%;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.bg-color {
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 100vh;
 }
 
 .bg-alainza {
@@ -33,9 +44,7 @@ body {
   background-repeat: no-repeat;
 }
 
-.bg-color {
-  background-color: rgba(0, 0, 0, 0.3);
-}
+
 
 header {
   background-color: transparent;
