--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=K2D");
 
 body {
-  background: white;
+  /* background: white; */
   font-family: "K2D", sans-serif;
-  font-size: 19px;
+  /* font-size: 19px; */
 }
+
 .js div#preloader {
   position: fixed;
   left: 0;
@@ -35,6 +36,19 @@ body {
   background-color: rgba(0, 0, 0, 0.3);
   height: 100vh;
 }
+
+#texto-main{
+  height: 80%;
+}
+
+.flecha-abajo a i {
+  text-align: center;
+  position: absolute;
+  bottom: 25px;
+  font-size: 38px;
+  color: #fff;
+}
+
 
 .bg-alainza {
   min-height: 50vh;
@@ -77,13 +91,7 @@ header a:hover {
   color: white !important;
 }
 
-.flecha-abajo a i {
-  text-align: center;
-  position: absolute;
-  bottom: 25px;
-  font-size: 38px;
-  color: #fff;
-}
+
 
 #servicios {
   background: rgb(163, 255, 151);
