--- a/css/style.css
+++ b/css/style.css
@@ -145,12 +145,12 @@ header .bg-nav-menu{
 }
 
 #footer {
-  background: #e9ecef;
+  background: #628C04;
   padding-top: 2em;
 }
 
 #derechos {
-  background-color: #d8d8d8;
+  background-color: #628C04;
   padding-top: 1em;
   padding-bottom: 15px;
 }
