--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-
+@import url("https://use.fontawesome.com/releases/v5.4.1/css/all.css");
 
 @import url("https://fonts.googleapis.com/css?family=K2D");
 
