--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 
 @import url("https://fonts.googleapis.com/css?family=K2D");
 
+@import url("../css/bootstrap.min.css");
+
 body {
   /* background: white; */
   font-family: "K2D", sans-serif;
