--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 
 @import url("../css/normalize.css");
 
+@import url("../css/animaciones.css");
+
 body {
   /* background: white; */
   font-family: "K2D", sans-serif;
@@ -210,6 +212,10 @@ Alianza       V
   top: -35px;
   border: 1px solid black;
 }
+.cabecita:hover{
+  
+}
+
 .botoncito {
   position: relative;
   bottom: -16px;
