--- a/css/style.css
+++ b/css/style.css
@@ -201,19 +201,18 @@ Alianza       V
   -webkit-border-radius: 5px 5px 5px 5px;
 
   border: 0.5px solid #ccc;
+  transition-duration: .3s;
 
   margin-top: 3em;
   margin-bottom: 1em;
 }
+
 .cabecita {
   width: 100px;
   height: 70px;
   position: relative;
   top: -35px;
-  border: 1px solid black;
-}
-.cabecita:hover{
-  
+  border: 5px solid white;
 }
 
 .botoncito {
