--- a/css/animaciones.css
+++ b/css/animaciones.css
@@ -1,6 +1,6 @@
 .alianza:hover .cabecita {
-  -webkit-animation: animation 1000ms linear infinite both;
-  animation: animation 1000ms linear infinite both;
+  -webkit-animation: animation 1000ms linear both;
+  animation: animation 1000ms linear both;
 }
 
 .alianza:hover {
