--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,13 @@ header .bg-nav-menu {
   margin-bottom: 1em;
 }
 
+.tarjeta2 {
+  -webkit-box-shadow: 0px 0px 52px 18px rgba(255,255,255,1);
+  -moz-box-shadow: 0px 0px 52px 18px rgba(255,255,255,1);
+  box-shadow: 0px 0px 52px 18px rgba(255,255,255,1);
+  
+}
+
 /* 
 Pagina        |
 de            |
