--- a/css/style.css
+++ b/css/style.css
@@ -185,10 +185,17 @@ header .bg-nav-menu {
 }
 
 .tarjeta2 {
-  -webkit-box-shadow: 0px 0px 52px 18px rgba(255,255,255,1);
-  -moz-box-shadow: 0px 0px 52px 18px rgba(255,255,255,1);
-  box-shadow: 0px 0px 52px 18px rgba(255,255,255,1);
-  
+  border-radius: 15px 15px 15px 15px;
+  -moz-border-radius: 15px 15px 15px 15px;
+  -webkit-border-radius: 15px 15px 15px 15px;
+  border: 0px solid #000000;
+}
+.tarjeta2:hover {
+  -webkit-box-shadow: 0px 0px 52px -14px rgba(0, 238, 255, 1);
+  -moz-box-shadow: 0px 0px 52px -14px rgba(0, 238, 255, 1);
+  box-shadow: 0px 0px 52px -14px rgba(0, 238, 255, 1);
+
+  transition-duration: 0.5s;
 }
 
 /* 
