--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ header .bg-nav-menu {
   -moz-border-radius: 15px 15px 15px 15px;
   -webkit-border-radius: 15px 15px 15px 15px;
   border: 3px solid #adadad;
-  background-color: #ff0000;
+  background-color: #006eff;
   
   margin: 0.5em;
   transition-duration: .3s;
@@ -200,7 +200,7 @@ header .bg-nav-menu {
   box-shadow: 0px 0px 52px -14px rgba(0, 238, 255, 1);
   border: 3px solid #cccccc28;
 
-  background-color: #006eff;
+  background-color: #06E0FA;
 
   transition-duration: .3s;
 }
