--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,25 @@ header .bg-nav-menu {
   transition-duration: .3s;
 }
 
+.tarjeta3 {
+  border-radius: 10px 10px 10px 10px;
+  -moz-border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+
+  border: 3px solid #adadad;
+  background-color: white;
+  
+  margin: 0.5em;
+  transition-duration: .3s;
+}
+
+.contenido-tarjeta3{
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+}
+
 .carousel-inner img{
   max-height: 460px;
 }
@@ -235,7 +254,6 @@ Alianza       V
   height: 70px;
   position: relative;
   top: -35px;
-  border: 5px solid white;
 }
 
 .botoncito {
@@ -301,7 +319,14 @@ section > a > img {
 }
 
 #biodiversidad{
-  margin-top: 3em;
+  margin-top: 5em;
   background-color: #212020;
-  height: 100vh;
+  height: 93vh;
+}
+
+.cabecita2 {
+  height: 200px;
+  width: auto;
+  position: relative;
+  top: -90px;
 }
