--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ header .bg-nav-menu {
   -moz-border-radius: 15px 15px 15px 15px;
   -webkit-border-radius: 15px 15px 15px 15px;
   border: 3px solid #adadad;
-  background-color: #006eff;
+  background-color: #00933f;
   
   margin: 0.5em;
   transition-duration: .3s;
