--- a/css/animaciones.css
+++ b/css/animaciones.css
@@ -8,7 +8,7 @@
   -moz-box-shadow: 0px 0px 20px 0px yellow;
   box-shadow: 0px 0px 20px 0px yellow;
 
-  background-color: rgba(132, 255, 138, 0.678);
+  background-color: rgb(123, 255, 0);
 
   transition-duration: .3s;
 }
