--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,7 @@ Alianza       V
   -webkit-border-radius: 5px 5px 5px 5px;
 
   border: 0.5px solid #ccc;
+  background-color: white;
   transition-duration: 0.3s;
 
   margin-top: 3em;
