--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
 
 @import url("../css/bootstrap.min.css");
 
+@import url("../css/font-size.css");
+
 @import url("../css/normalize.css");
 
 @import url("../css/animaciones.css");
@@ -332,13 +334,21 @@ section > a > img {
   top: -90px;
 }
 
+#gastronomia {
+  position: relative;
+  background-color: white;
+}
 #parallax1 {
   background-image: url(../img/gastronomia.jpg);
+  opacity: .4;
   background-size: auto 150vh;
   background-position: center center;
-  height: 30vh;
+  height: 400px;
+  position: relative;
 }
 
-#noticias {
-
+.contenido-parallax {
+  top: 0;
+  position: absolute;
+  height: 400px;
 }
