--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,28 @@
 @import url("https://use.fontawesome.com/releases/v5.4.1/css/all.css");
-
 @import url("https://fonts.googleapis.com/css?family=K2D");
-
 @import url("../css/bootstrap.min.css");
-
 @import url("../css/font-size.css");
-
 @import url("../css/normalize.css");
-
 @import url("../css/animaciones.css");
-
 body {
   /* background: white; */
   font-family: "K2D", sans-serif;
-  background: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI1IiBoZWlnaHQ9IjUiPgo8cmVjdCB3aWR0aD0iNSIgaGVpZ2h0PSI1IiBmaWxsPSIjZmZmIj48L3JlY3Q+CjxyZWN0IHdpZHRoPSIxIiBoZWlnaHQ9IjEiIGZpbGw9IiNjY2MiPjwvcmVjdD4KPC9zdmc+");
+  /* background: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI1IiBoZWlnaHQ9IjUiPgo8cmVjdCB3aWR0aD0iNSIgaGVpZ2h0PSI1IiBmaWxsPSIjZmZmIj48L3JlY3Q+CjxyZWN0IHdpZHRoPSIxIiBoZWlnaHQ9IjEiIGZpbGw9IiNjY2MiPjwvcmVjdD4KPC9zdmc+"); */
 }
 
 p {
   margin: 0;
 }
+
 i {
   color: #00933f;
 }
+
 .title {
   color: rgba(0, 147, 63, 1);
   font-size: 3rem !important;
 }
+
 .title2 {
   color: rgba(0, 147, 63, 1);
   font-size: 2rem !important;
@@ -39,8 +36,7 @@ i {
   width: 100%;
   height: 100%;
   overflow: visible;
-  background: rgba(255, 255, 255, 0.5) url(../img/load.gif) no-repeat center
-    center fixed;
+  background: rgba(255, 255, 255, 0.5) url(../img/load.gif) no-repeat center center fixed;
 }
 
 /* NAVBAR */
@@ -71,6 +67,7 @@ header .bg-nav-menu {
 /* FIN NAVBAR */
 
 /* tamaño del main */
+
 #main {
   height: 100vh;
   clip-path: polygon(50% 0%, 100% 0, 100% 75%, 85% 100%, 0 100%, 0 0);
@@ -112,6 +109,7 @@ header .bg-nav-menu {
   background-color: rgba(0, 147, 63, 1) !important;
   color: #fff;
 }
+
 .btn-contacto:hover {
   background-color: rgba(85, 203, 117, 1) !important;
 }
@@ -156,6 +154,7 @@ header .bg-nav-menu {
   filter: brightness(0.6);
   transition-duration: 0.6s;
 }
+
 #mapa:hover {
   transition-duration: 0.6s;
   filter: brightness(1);
@@ -177,16 +176,12 @@ header .bg-nav-menu {
   -webkit-box-shadow: 0px 0px 14px -1px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 14px -1px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 14px -1px rgba(0, 0, 0, 0.75);
-
   border-radius: 10px 10px 10px 10px;
   -moz-border-radius: 10px 10px 10px 10px;
   -webkit-border-radius: 10px 10px 10px 10px;
   border: 0px solid #000000;
-
   background-color: white;
-
   padding: 1em 0.3em;
-
   margin-bottom: 1em;
 }
 
@@ -196,18 +191,16 @@ header .bg-nav-menu {
   -webkit-border-radius: 15px 15px 15px 15px;
   border: 3px solid #adadad;
   background-color: #00933f;
-  
   margin: 0.5em;
   transition-duration: .3s;
 }
+
 .tarjeta2:hover {
   -webkit-box-shadow: 0px 0px 52px -14px rgba(0, 238, 255, 1);
   -moz-box-shadow: 0px 0px 52px -14px rgba(0, 238, 255, 1);
   box-shadow: 0px 0px 52px -14px rgba(0, 238, 255, 1);
   border: 3px solid #cccccc28;
-
   background-color: #06E0FA;
-
   transition-duration: .3s;
 }
 
@@ -215,23 +208,22 @@ header .bg-nav-menu {
   border-radius: 10px 10px 10px 10px;
   -moz-border-radius: 10px 10px 10px 10px;
   -webkit-border-radius: 10px 10px 10px 10px;
-
   border: 3px solid #adadad;
   background-color: white;
-  
   margin: 0.5em;
   transition-duration: .3s;
-
   position: relative;
 }
+
 .tarjeta3 img {
   margin: 1em 0;
 }
+
 .tarjeta3 p {
-  margin-bottom: 1em; 
+  margin-bottom: 1em;
 }
 
-.carousel-inner img{
+.carousel-inner img {
   max-height: 460px;
 }
 
@@ -248,11 +240,9 @@ Alianza       V
   border-radius: 5px 5px 5px 5px;
   -moz-border-radius: 5px 5px 5px 5px;
   -webkit-border-radius: 5px 5px 5px 5px;
-
   border: 0.5px solid #ccc;
   background-color: white;
   transition-duration: 0.3s;
-
   margin-top: 3em;
   margin-bottom: 1em;
 }
@@ -266,15 +256,14 @@ Alianza       V
 
 .botoncito {
   position: relative;
-  bottom: -16px;
-
+  bottom: -20px;
   border-radius: 200px 200px 200px 200px;
   -moz-border-radius: 200px 200px 200px 200px;
   -webkit-border-radius: 200px 200px 200px 200px;
   border: 0px solid #000000;
-
   font-weight: 600;
 }
+
 .botoncito:hover {
   color: rgba(255, 236, 2, 1);
 }
@@ -305,21 +294,19 @@ Alianza       V
   transition-duration: 0.4s;
 }
 
-section > a > img {
+section>a>img {
   width: 90px;
 }
 
 .plash {
   background-color: #45fe00;
   max-height: 600px;
-
   -webkit-clip-path: polygon(0 0, 100% 0, 71% 100%, 0% 100%);
   clip-path: polygon(0 0, 100% 0, 71% 100%, 0% 100%);
-
   z-index: 0;
 }
 
-#biodiversidad{
+#biodiversidad {
   margin-top: 5em;
   background-color: #212020;
   padding-bottom: 2em;
@@ -337,18 +324,20 @@ section > a > img {
 #gastronomia {
   position: relative;
   background-color: white;
+  margin-bottom: 2em;
 }
+
 #parallax1 {
   background-image: url(../img/gastronomia.jpg);
   opacity: .4;
   background-size: auto 150vh;
   background-position: center center;
-  height: 400px;
+  height: 300px;
   position: relative;
 }
 
 .contenido-parallax {
   top: 0;
   position: absolute;
-  height: 400px;
+  height: 300px;
 }
