--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,12 @@ i {
 
 .title {
   color: rgba(0, 147, 63, 1);
-  font-size: 3rem !important;
+  font-size: 2.5rem !important;
 }
 
 .title2 {
   color: rgba(0, 147, 63, 1);
-  font-size: 2rem !important;
+  font-size: 1.5rem !important;
 }
 
 .js div#preloader {
@@ -329,15 +329,17 @@ section>a>img {
 
 #parallax1 {
   background-image: url(../img/gastronomia.jpg);
-  opacity: .4;
+  opacity: .6;
   background-size: auto 150vh;
   background-position: center center;
-  height: 300px;
+  height: 400px;
   position: relative;
 }
 
 .contenido-parallax {
   top: 0;
   position: absolute;
-  height: 300px;
+  height: 400px;
+  text-shadow: 2px 2px black;
+  color: white;
 }
