--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,15 @@
 @import url("../css/font-size.css");
 @import url("../css/normalize.css");
 @import url("../css/animaciones.css");
+@import url("../css/barra-scroll.css");
 body {
-  /* background: white; */
   font-family: "K2D", sans-serif;
+  text-shadow: 2px 2px black;
+  color: white;
   /* background: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI1IiBoZWlnaHQ9IjUiPgo8cmVjdCB3aWR0aD0iNSIgaGVpZ2h0PSI1IiBmaWxsPSIjZmZmIj48L3JlY3Q+CjxyZWN0IHdpZHRoPSIxIiBoZWlnaHQ9IjEiIGZpbGw9IiNjY2MiPjwvcmVjdD4KPC9zdmc+"); */
+}
+h1 h2 h3 h4 h5 h6 {
+  color: #00933F;
 }
 
 p {
@@ -20,12 +25,19 @@ i {
 
 .title {
   color: rgba(0, 147, 63, 1);
+  text-shadow: 2px 2px rgb(229, 255, 0);
   font-size: 2.5rem !important;
 }
 
 .title2 {
   color: rgba(0, 147, 63, 1);
+  text-shadow: 2px 2px rgb(229, 255, 0);
   font-size: 1.5rem !important;
+}
+
+.green {
+  color: rgba(0, 147, 63, 1);
+  text-shadow: 2px 2px rgb(229, 255, 0);
 }
 
 .js div#preloader {
@@ -340,6 +352,5 @@ section>a>img {
   top: 0;
   position: absolute;
   height: 400px;
-  text-shadow: 2px 2px black;
   color: white;
 }
