--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,11 @@
 @import url("../css/barra-scroll.css");
 body {
   font-family: "K2D", sans-serif;
-  text-shadow: 2px 2px black;
+  text-shadow: 1px 1px black;
   color: white;
   /* background: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI1IiBoZWlnaHQ9IjUiPgo8cmVjdCB3aWR0aD0iNSIgaGVpZ2h0PSI1IiBmaWxsPSIjZmZmIj48L3JlY3Q+CjxyZWN0IHdpZHRoPSIxIiBoZWlnaHQ9IjEiIGZpbGw9IiNjY2MiPjwvcmVjdD4KPC9zdmc+"); */
 }
+
 h1 h2 h3 h4 h5 h6 {
   color: #00933F;
 }
@@ -20,7 +21,18 @@ p {
 }
 
 i {
-  color: #00933f;
+  color: #00933F;
+}
+
+i:hover {
+  color: rgb(229, 255, 0);
+  transition-duration: .3s;
+}
+
+hr {
+  height: 12px;
+  border: 0;
+  box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
 }
 
 .title {
@@ -255,6 +267,7 @@ Alianza       V
   border: 0.5px solid #ccc;
   background-color: white;
   transition-duration: 0.3s;
+  color: #b700ff;
   margin-top: 3em;
   margin-bottom: 1em;
 }
