--- a/css/style.css
+++ b/css/style.css
@@ -306,8 +306,8 @@ section>a>img {
 }
 
 .cabecita2 {
-  height: 200px;
-  width: auto;
+  height: 180px;
+  width: 180px;
   position: absolute;
   top: -90px;
 }
@@ -320,6 +320,7 @@ section>a>img {
   position: relative;
   background-color: white;
   margin-bottom: 2em;
+  margin-top: 5em;
 }
 
 #parallax1 {
@@ -346,6 +347,7 @@ section>a>img {
   position: relative;
   background-color: white;
   margin-bottom: 2em;
+  margin-top: 5em;
 }
 
 #parallax2 {
